--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -48,10 +48,11 @@
     "test:watch": "npm test -- --watch",
     "preupver": "npm test",
     "upver": "standard-version",
-    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
-    "watch:debug": "npm run watch -- -v",
-    "watch:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env zen watch",
-    "watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch"
+    "zen:watch": "zen watch -x",
+    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "watch:debug": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch -- -v",
+    "watch:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env npm run zen:watch",
+    "watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env npm run zen:watch"
   },
   "dependencies": {
     "@cdm-logger/server": "^5.0.5",
