--- a/servers/hemera-server/charts/hemera/values.yaml
+++ b/servers/hemera-server/charts/hemera/values.yaml
@@ -24,15 +24,15 @@ env:
   LOG_LEVEL: info
   HEMERA_LOG_LEVEL: info
   CONNECTION_ID: v1
-  NATS_URL: "nats://adminide-idestack-nats.adminide.svc.cluster.local:4222"
+  NATS_URL: "nats://microstack-nats.main-system.svc.cluster.local:4222"
   NATS_USER: "ruser"
   NATS_PW: "T0pS3cr3t"
-  REDIS_URL: "redis://adminide-idestack-redis.adminide.svc.cluster.local:6379"
-  MONGO_URL: "mongodb://adminide-idestack-mongodb.adminide.svc.cluster.local:27017/idestack"
-  ZIPKIN_URL: "adminide-idestack-zipkin.adminide.svc.cluster.local"
+  REDIS_URL: "redis://microstack-redis-cache.main-system.svc.cluster.local:6379"
+  MONGO_URL: "mongodb://microstack-mongodb.main-system.svc.cluster.local:27017/idestack"
+  ZIPKIN_URL: "microstack-zipkin.main-system.svc.cluster.local"
   ZIPKIN_PORT: "9411"
 external:
-  service: 
+  service:
     mongodb:
       enabled: false
       serviceName: microstack-mongodb.main-system.svc.cluster.local
