--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -120,11 +120,12 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.1.0",
-    "redux-persist": "^5.10.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.1",
     "rxjs-compat": "^6.5.2",
+    "rxjs-hooks": "^0.5.2",
     "serialize-javascript": "^1.7.0",
     "sourcemapped-stacktrace": "^1.1.9",
     "subscriptions-transport-ws": "0.9.15",
