Generate hemera-server helm chart using draft tool

--- a/servers/hemera-server/charts/hemera-server/templates/deployment.yaml
+++ b/servers/hemera-server/charts/hemera-server/templates/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       annotations:
-        buildID: {{ default "builtwithhelm" .Values.buildID }}
+        buildID: {{ .Values.buildID }}
       labels:
         draft: {{ default "draft-app" .Values.draft }}
         app: {{ template "fullname" . }}
