--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "generateGraphql:watch": "npm run generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap --hoist",
-    "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop && node tools/update-dependency-version.js",
+    "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop -m 'merge from develop'",
     "devpublish": "lerna publish prerelease --ignore-scripts",
+    "devpublish:auto": "npm run devpublish -- --yes",
     "devpublish:push": "npm run predevpublish && git push origin devpublish && npm run postdevpublish",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "postdevpublish": "git checkout develop",
