--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -87,6 +87,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
+    "graphql-bigint": "^1.0.0",
     "graphql-nats-subscriptions": "^1.4.1",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.6",
