--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -74,6 +74,7 @@
     "apollo-link-ws": "^1.0.19",
     "apollo-logger": "^0.3.3",
     "apollo-server-cache-memcached": "^0.6.3",
+    "apollo-server-cache-redis": "^1.1.5",
     "apollo-server-caching": "^0.5.0",
     "apollo-server-core": "^2.9.14",
     "apollo-server-express": "^2.9.14",
