--- a/codegen.yml
+++ b/codegen.yml
@@ -2,6 +2,8 @@ overwrite: true
 schema: "./servers/backend-server/generated-schema.graphql"
 generates:
   typings/graphql.d.ts:
+    schema: "packages-modules/counter/browser/src/apollo-server-n-client/**/*.graphql"
+    documents: "packages-modules/counter/browser/src/**/*.gql"
     plugins:
       - typescript-graphql-files-modules
   packages-modules/counter/browser/src/generated-models.ts:
