--- a/servers/frontend-server/Dockerfile
+++ b/servers/frontend-server/Dockerfile
@@ -1,5 +1,6 @@
 # The official nodejs docker image
-FROM node:slim
+FROM node:10.15.3-alpine
+ENV PYTHON /usr/bin/python
 
 # Copy package.json only to temp folder, install its dependencies,
 # set workdir and copy the dependnecies there
