--- a/servers/hemera-server/Dockerfile
+++ b/servers/hemera-server/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:8.9-alpine
+FROM node:10.15.3
+ENV PYTHON /usr/bin/python
 
 # Copy package.json only to temp folder, install its dependencies,
 # set workdir and copy the dependnecies there
