--- a/packages-modules/healthcheck/server/package.json
+++ b/packages-modules/healthcheck/server/package.json
@@ -43,14 +43,14 @@
   "license": "ISC",
   "dependencies": {
     "@hmcts/nodejs-healthcheck": "^1.5.1",
-    "ioredis": "^4.14.1",
     "mongo-healthcheck": "^2.0.1",
-    "mongoose": "^5.8.9",
-    "nats": "^1.4.0",
     "redis-healthcheck": "^0.1.1"
   },
   "peerDependencies": {
-    "@common-stack/server-core": ">=0.0.209"
+    "@common-stack/server-core": ">=0.0.209",
+    "ioredis": "^4.14.1",
+    "mongoose": "^5.8.9",
+    "nats": "^1.4.0"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
