--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -99,6 +99,7 @@
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.20.4",
     "lodash": "^4.17.15",
+    "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "nats": "^1.3.2",
     "nats-hemera": "^7.0.2",
