--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@ values.secret.json filter=git-crypt diff=git-crypt
 .npmrc filter=git-crypt diff=git-crypt
 values-dev.yaml filter=git-crypt diff=git-crypt
 values-stage.yaml filter=git-crypt diff=git-crypt
-values-prod.yam filter=git-crypt diff=git-crypt
+values-prod.yaml filter=git-crypt diff=git-crypt
