--- a/servers/moleculer-server/Dockerfile
+++ b/servers/moleculer-server/Dockerfile
@@ -3,14 +3,24 @@ FROM node:10-alpine
 RUN mkdir /app
 WORKDIR /app
 
+# Copy package.json only to temp folder, install its dependencies,
+# set workdir and copy the dependnecies there
+# This way, dependnecies are cached without the need of cacheing all files.
 
-COPY package*.json ./
+ADD package.json /tmp/package.json
+RUN set -ex \
+	&& cd /tmp \
+	&& npm install \
+	&& mkdir -p /home/app \
+	&& cp -a /tmp/node_modules /home/app/ \
+	&& rm -Rf /tmp/*
 
-RUN npm ci 
+WORKDIR /home/app
 
-COPY . .
+# Copy the rest of the files to the container workdir
+ADD . /home/app
 
-RUN npm run build && npm prune --production
+ENV PORT=3000
+EXPOSE ${PORT}
 
-ENV NODE_ENV=production
-CMD ["npm", "start"]
+CMD [ "npm", "start" ]
