--- a/servers/moleculer-server/tsconfig.json
+++ b/servers/moleculer-server/tsconfig.json
@@ -1,19 +1,21 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "sourceMap": true,
+    "declaration": false,
+    "outDir": "./dist",
     "pretty": true,
     "types": [
       "jest",
       "node"
-    ],
-    "sourceMap": true,
-    "target": "es6",
-    "baseUrl": "./"
+    ]
   },
   "exclude": [
     "node_modules",
-    "test"
+    "test",
+    "lib",
+    "dist",
+    "webpack.config.js"
   ]
 }
