--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -43,6 +43,7 @@
     "graphql-nats-subscriptions": "^1.4.1",
     "helmet": "^3.21.2",
     "inversify": "^5.0.1",
+    "iterall": "1.3.0",
     "nats": "^1.3.2",
     "moleculer": "^0.13.0",
     "moleculer-zipkin": "0.2.2",
