--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -34,15 +34,22 @@
     "rimraf": "^3.0.0"
   },
   "dependencies": {
+    "@cdm-logger/client": "^5.0.7",
     "@cdm-logger/server": "^5.0.5",
+    "@cdmbase/graphql-type-uri": "^0.4.1",
+    "@common-stack/core": "0.0.209",
+    "@common-stack/client-core": "0.0.209",
+    "@common-stack/server-core": "0.0.209",
     "@sample-stack/core": "file:../../packages/sample-core",
     "@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
     "@sample-stack/server-core": "file:../../packages/sample-server-core",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.0",
+    "esm": "^3.2.25",
     "graphql-nats-subscriptions": "^1.4.1",
     "helmet": "^3.21.2",
     "inversify": "^5.0.1",
+    "inversify-logger-middleware": "^3.1.0",
     "iterall": "1.3.0",
     "nats": "^1.3.2",
     "moleculer": "^0.13.0",
