update moleculer changes

--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -27,12 +27,15 @@
   "typings": "dist/main.d.ts",
   "scripts": {
     "build": "cross-env NODE_ENV=production zen build -x",
+    "build:debug": "cross-env NODE_ENV=development zen build -x",
     "build:clean": "rimraf dist",
     "db:migrate": "knex -- migrate:latest --cwd . --knexfile ./knexfile.js",
     "db:migrate:rollback": "knex -- migrate:rollback  --cwd . --knexfile ./knexfile.js",
     "db:seed": "npm run db:migrate && knex -- seed:run  --cwd . --knexfile ./knexfile.js",
     "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+    "docker:build:debug": "npm run build:debug && docker build . -t $npm_package_name:$npm_package_version",
     "docker:run": "docker run  --env-file ../../config/staging/docker-staging.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
+    "docker:run:debug": "cross-env NODE_ENV=development docker run  --env-file ../../config/staging/docker-staging.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
     "proddb:migrate": "NODE_ENV=production npm run db:migrate",
     "proddb:migrate:rollback": "NODE_ENV=production npm run db:migrate:rollback",
     "proddb:seed": "NODE_ENV=production npm run db:seed",
