--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "My Moleculer microservices project",
   "scripts": {
-    "cli":"moleculer connect NATS",
+    "cli": "moleculer connect --config ./dist/moleculer.config.js",
+    "cli:dev": " cross-env ENV_FILE=../../config/development/dev.env npm run cli",
+    "cli:staging": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env  npm run cli",
+    "cli:test": " cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env  npm run cli",
+    "cli:docker": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/docker-staging.env  npm run cli",
     "watch": "npm run start:dev",
     "start": "node dist/index.js",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env nodemon dist",
@@ -51,7 +55,6 @@
     "inversify": "^5.0.1",
     "inversify-logger-middleware": "^3.1.0",
     "iterall": "1.3.0",
-    "nats": "^1.3.2",
     "moleculer": "^0.14.2",
     "moleculer-zipkin": "0.2.2",
     "reflect-metadata": "^0.1.13"
