--- a/servers/moleculer-server/tsconfig.json
+++ b/servers/moleculer-server/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
     "outDir": "./dist",
     "pretty": true,
+    "skipLibCheck": true,
     "types": [
       "jest",
       "node"
