--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -53,7 +53,13 @@
     "dotenv": "^8.2.0",
     "envalid": "^6.0.0",
     "esm": "^3.2.25",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "graphql-bigint": "^1.0.0",
     "graphql-nats-subscriptions": "^1.4.1",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^4.0.6",
+    "graphql-type-json": "^0.3.1",
     "helmet": "^3.21.2",
     "inversify": "^5.0.1",
     "inversify-logger-middleware": "^3.1.0",
