--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -51,6 +51,7 @@
     "apollo-server-cache-memcached": "^0.6.3",
     "apollo-server-cache-redis": "^1.1.5",
     "apollo-server-caching": "^0.5.0",
+    "apollo-server-errors": "^2.4.0",
     "apollo-datasource": "^0.7.0",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.0",
