--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -1,80 +1,80 @@
 {
   "name": "sample-stack-moleculer-server",
   "version": "1.0.0",
-  "description": "My Moleculer microservices project",
   "private": true,
-  "scripts": {
-    "cli": "moleculer connect --config ./dist/moleculer.config.js",
-    "cli:dev": " cross-env ENV_FILE=../../config/development/dev.env npm run cli",
-    "cli:staging": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env  npm run cli",
-    "cli:test": " cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env  npm run cli",
-    "cli:docker": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/docker-staging.env  npm run cli",
-    "watch": "npm run start:dev",
-    "start": "node dist/index.js",
-    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env nodemon dist",
-    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
-    "start:dev": "cross-env ENV_FILE=../../config/development/dev.env nodemon dist",
-    "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-    "docker:run": "docker run -it --env-file ../../config/staging/docker-staging.env  $npm_package_name:$npm_package_version",
-    "prebuild": "npm run build:clean",
-    "pretest": "npm run build",
-    "build": "cross-env NODE_ENV=production npm run build:dist",
-    "build:watch": "npm run build:dist -- --watch",
-    "build:dist": "webpack",
-    "build:clean": "rimraf dist",
-    "jest": "./node_modules/.bin/jest",
-    "test": "jest",
-    "test:debug": "npm test -- --runInBand",
-    "test:watch": "npm test -- --watch"
-  },
+  "description": "My Moleculer microservices project",
   "keywords": [
     "microservices",
     "moleculer"
   ],
   "author": "",
-  "devDependencies": {
-    "cross-env": "^6.0.3",
-    "pm2": "^4.2.1",
-    "rimraf": "^3.0.0"
+  "scripts": {
+    "prebuild": "npm run build:clean",
+    "build": "cross-env NODE_ENV=production npm run build:dist",
+    "build:clean": "rimraf dist",
+    "build:dist": "webpack",
+    "build:watch": "npm run build:dist -- --watch",
+    "cli": "moleculer connect --config ./dist/moleculer.config.js",
+    "cli:dev": " cross-env ENV_FILE=../../config/development/dev.env npm run cli",
+    "cli:docker": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/docker-staging.env  npm run cli",
+    "cli:staging": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env  npm run cli",
+    "cli:test": " cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env  npm run cli",
+    "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+    "docker:run": "docker run -it --env-file ../../config/staging/docker-staging.env  $npm_package_name:$npm_package_version",
+    "jest": "./node_modules/.bin/jest",
+    "start": "node dist/index.js",
+    "start:dev": "cross-env ENV_FILE=../../config/development/dev.env nodemon dist",
+    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
+    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env nodemon dist",
+    "pretest": "npm run build",
+    "test": "jest",
+    "test:debug": "npm test -- --runInBand",
+    "test:watch": "npm test -- --watch",
+    "watch": "npm run start:dev"
   },
   "dependencies": {
     "@cdm-logger/client": "^5.0.7",
     "@cdm-logger/server": "^5.0.5",
     "@cdmbase/graphql-type-uri": "^0.4.1",
-    "@common-stack/core": "0.0.220",
     "@common-stack/client-core": "0.0.220",
+    "@common-stack/core": "0.0.220",
     "@common-stack/server-core": "0.0.220",
     "@sample-stack/core": "file:../../packages/sample-core",
     "@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
     "@sample-stack/server-core": "file:../../packages/sample-server-core",
+    "apollo-datasource": "^0.7.0",
     "apollo-logger": "^0.3.3",
     "apollo-server-cache-memcached": "^0.6.3",
     "apollo-server-cache-redis": "^1.1.5",
     "apollo-server-caching": "^0.5.1",
     "apollo-server-errors": "^2.4.0",
-    "apollo-datasource": "^0.7.0",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.0",
     "esm": "^3.2.25",
     "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
     "graphql-bigint": "^1.0.0",
     "graphql-nats-subscriptions": "^1.4.1",
     "graphql-subscriptions": "^1.1.0",
+    "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.6",
     "graphql-type-json": "^0.3.1",
     "helmet": "^3.21.2",
     "inversify": "^5.0.1",
     "inversify-logger-middleware": "^3.1.0",
     "ioredis": "^4.14.1",
-    "lodash": "^4.17.15",
     "iterall": "1.3.0",
+    "lodash": "^4.17.15",
     "moleculer": "^0.14.2",
     "moleculer-zipkin": "0.2.2",
     "mongodb": "^3.1.0",
     "mongoose": "^5.8.9",
     "nats": "^1.3.2",
     "reflect-metadata": "^0.1.13"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "pm2": "^4.2.1",
+    "rimraf": "^3.0.0"
   },
   "engines": {
     "node": ">= 8.x.x"
