--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -79,6 +79,8 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.6.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "envalid": "^6.0.0",
     "error-stack-parser": "^2.0.4",
     "esm": "^3.2.25",
     "express": "^4.17.1",
