added test scenarios

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@graphql-codegen/typescript-resolvers": "1.9.1",
     "@hot-loader/react-dom": "^16.11.0",
     "@larix/zen": "0.1.35",
+    "@shelf/jest-mongodb": "^1.1.5",
     "@types/async": "^3.0.3",
     "@types/body-parser": "1.17.1",
     "@types/bunyan": "^1.8.6",
@@ -192,6 +193,7 @@
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
+    "merge": "^1.2.1",
     "mime": "^2.4.4",
     "mini-css-extract-plugin": "^0.9.0",
     "minilog": "^3.1.0",
