--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "caporal": "^1.3.0",
+    "chokidar": "^3.4.0",
     "concurrently": "^5.0.2",
     "connect": "^3.7.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -246,7 +247,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "wait-on": "^3.3.0",
-    "webpack": "4.41.4",
+    "webpack": "4.43.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "3.10.1",
@@ -259,6 +260,9 @@
     "webpack-virtual-modules": "^0.2.1",
     "webpack-visualizer-plugin": "^0.1.11",
     "ws": "^7.2.1"
+  },
+  "resolutions": {
+    "chokidar": "^3.4.0"
   },
   "engines": {
     "node": ">=10.15.3 < 12.0.0",
