--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "css-loader": "^3.4.0",
     "dotenv-safe": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
-    "envalid": "^6.0.0",
+    "envalid": "6.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
