--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -87,7 +87,7 @@
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
-    "envalid": "^6.0.0",
+    "envalid": "6.0.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
