--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -49,7 +49,7 @@
     "apollo-server-caching": "^0.5.1",
     "apollo-server-errors": "^2.4.0",
     "dotenv": "^8.2.0",
-    "envalid": "^6.0.0",
+    "envalid": "6.0.1",
     "esm": "^3.2.25",
     "graphql": "^14.5.8",
     "graphql-bigint": "^1.0.0",
