split and use platform package

--- a/lerna.json
+++ b/lerna.json
@@ -25,6 +25,6 @@
       "message": "chore: release package(s)"
     }
   },
-  "packages": ["packages-modules/**", "packages/*", "servers/*"],
+  "packages": ["packages-modules/**", "packages/**", "servers/*"],
   "version": "0.0.0"
 }
