--- a/package.json
+++ b/package.json
@@ -244,7 +244,7 @@
     "tslint-loader": "^3.6.0",
     "tslint-react": "^4.1.0",
     "typedoc": "^0.15.5",
-    "typescript": "3.7.4",
+    "typescript": "^3.8.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
