--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "devpublish": "lerna publish prerelease --ignore-scripts",
     "devpublish:auto": "npm run devpublish -- --yes",
     "devpublish:push": "npm run predevpublish && git push origin devpublish && npm run postdevpublish",
-    "devpublish:force": "npm run devpublish -- --force-publish=*",
+    "devpublish:force": "npm run devpublish:forceManual -- --yes",
+    "devpublish:forceManual": "npm run devpublish -- --force-publish=*",
     "postdevpublish": "git checkout develop",
     "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
