--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -109,6 +109,7 @@
     "react-fela": "11.0.2",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
+    "react-i18next": "^11.7.3",
     "react-redux": "^7.1.3",
     "react-resizable": "^1.10.1",
     "react-router": "^5.1.2",
