--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production zen build",
-    "build:clean": "rimraf dist",
+    "build:clean": "rimraf dist .awcache",
     "build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
     "build:debug:verbose": "npm run build:debug -- -v",
     "docker:build": "cross-env NODE_OPTIONS='--max_old_space_size=4096' npm run build && docker build . -t $npm_package_name:$npm_package_version",
