move mobile app to new folder

--- a/lerna.json
+++ b/lerna.json
@@ -25,6 +25,8 @@
       "message": "chore: release package(s)"
     }
   },
+  "npmCLient": "yarn",
+  "useWorkspaces": true,
   "packages": ["packages-modules/**", "packages/**", "servers/*"],
   "version": "0.0.0"
 }
