--- a/package.json
+++ b/package.json
@@ -13,71 +13,73 @@
   "license": "MIT",
   "author": "CDMBase LLC",
   "workspaces": [
+    "packages-modules/**",
+    "packages/**",
     "servers/*"
   ],
   "scripts": {
-    "build": "npm run build:packages",
-    "build:clean": "lerna exec npm run build:clean",
+    "build": "yarn build:packages",
+    "build:clean": "lerna exec yarn build:clean",
     "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
     "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u",
-    "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
-    "clean:force": "rimraf package-lock.json && npm run clean",
+    "clean": "lerna clean --yes && yarn build:clean && rimraf node_modules",
+    "clean:force": "rimraf package-lock.json && yarn clean",
     "cli": "node tools/cli",
-    "compile": "lerna exec -- npm run compile",
+    "compile": "lerna exec -- yarn compile",
     "coverage": "jest --coverage",
     "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info",
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
-    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "db:seed": "yarn db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "generateGraphql": "graphql-codegen",
-    "generateGraphql:watch": "npm run generateGraphql -- --watch",
+    "generateGraphql:watch": "yarn generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap --hoist",
     "predevpublish": "git checkout devpublish && git pull origin devpublish && git merge -s recursive -X theirs develop -m 'merge from develop' && node tools/update-dependency-version.js",
     "devpublish": "lerna publish prerelease --ignore-scripts",
-    "devpublish:auto": "npm run devpublish -- --yes",
-    "devpublish:push": "npm run predevpublish && git push origin devpublish && npm run postdevpublish",
-    "devpublish:force": "npm run devpublish:forceManual -- --yes",
-    "devpublish:forceManual": "npm run devpublish -- --force-publish=*",
+    "devpublish:auto": "yarn devpublish -- --yes",
+    "devpublish:push": "yarn predevpublish && git push origin devpublish && yarn postdevpublish",
+    "devpublish:force": "yarn devpublish:forceManual -- --yes",
+    "devpublish:forceManual": "yarn devpublish -- --force-publish=*",
     "postdevpublish": "git checkout develop",
     "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
-    "publish": "npm run lernapublish",
-    "publish:force": "npm run lernapublish -- --force-publish=*",
+    "publish": "yarn lernapublish",
+    "publish:force": "yarn lernapublish -- --force-publish=*",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
-    "postbootstrap": "npm run build",
+    "postbootstrap": "yarn build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
-    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
-    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
+    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
     "test": "cross-env ENV_FILE=config/test/test.env jest",
-    "posttest": "npm run lint",
+    "posttest": "yarn lint",
     "test:watch": "npm test -- --watch",
-    "pretravis": "npm run compile",
+    "pretravis": "yarn compile",
     "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
-    "posttravis": "npm run lint",
+    "posttravis": "yarn lint",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
     "zen:build": "cross-env NODE_ENV=production zen build",
     "zen:exp": "zen exp",
     "zen:watch": "zen  watch -x",
-    "zen:watch:debug": "npm run zen:watch -- -v"
+    "zen:watch:debug": "yarn zen:watch -- -v"
   },
   "dependencies": {
-    "@sample-stack/platform-browser": "file:packages/sample-platform/browser",
     "@sample-stack/core": "file:packages/sample-core",
     "@sample-stack/counter-module-browser": "file:packages-modules/counter/browser",
     "@sample-stack/counter-module-server": "file:packages-modules/counter/server",
+    "@sample-stack/platform-browser": "file:packages/sample-platform/browser",
     "@sample-stack/platform-server": "file:packages/sample-platform/server",
     "@sample-stack/store": "file:packages/sample-store",
     "dataloader": "^2.0.0",
     "sample-stack-backend-server": "file:servers/backend-server",
     "sample-stack-frontend-server": "file:servers/frontend-server",
-    "sample-stack-moleculer-server": "file:servers/moleculer-server",
-    "sample-stack-mobile": "file:servers/mobile"
+    "sample-stack-mobile": "file:servers/mobile",
+    "sample-stack-moleculer-server": "file:servers/moleculer-server"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
@@ -161,8 +163,8 @@
     "connect": "^3.7.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^6.0.3",
-    "csstype": "^2.5.5",
     "css-loader": "^3.4.0",
+    "csstype": "^2.5.5",
     "dotenv-safe": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "envalid": "6.0.1",
@@ -270,7 +272,7 @@
   },
   "engines": {
     "node": ">=10.15.3 < 14.0.0",
-    "npm": ">=6.x < 7.x"
+    "npm": ">=6.x <=7.x"
   },
   "cacheDirectories": [
     ".cache"
