--- a/servers/moleculer-server/charts/chart/templates/deployment.yaml
+++ b/servers/moleculer-server/charts/chart/templates/deployment.yaml
@@ -3,17 +3,19 @@ kind: Deployment
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    draft: {{ default "draft-app" .Values.draft }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
+  selector:
+    matchLabels:
+      chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
       annotations:
         buildID: "{{ .Values.buildID }}"
       labels:
-        draft: {{ default "draft-app" .Values.draft }}
         app: {{ template "fullname" . }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     spec:
       containers:
       - name: {{ .Chart.Name }}
