update backend packages

--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -36,27 +36,27 @@
     "@cdm-logger/client": "^5.0.7",
     "@cdm-logger/server": "^6.0.0",
     "@cdmbase/graphql-type-uri": "^0.4.1",
-    "@common-stack/client-core": "0.0.229",
-    "@common-stack/core": "0.0.229",
-    "@common-stack/server-core": "0.0.229",
+    "@common-stack/client-core": "0.0.251",
+    "@common-stack/core": "0.0.251",
+    "@common-stack/server-core": "0.0.251",
     "@sample-stack/core": "file:../../packages/sample-core",
     "@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
     "@sample-stack/platform-server": "file:../../packages/sample-platform/server",
     "apollo-datasource": "^0.7.0",
     "apollo-logger": "^0.3.3",
-    "apollo-server-cache-memcached": "^0.6.3",
-    "apollo-server-cache-redis": "^1.1.5",
-    "apollo-server-caching": "^0.5.1",
-    "apollo-server-errors": "^2.4.0",
+    "apollo-server-cache-memcached": "^0.6.7",
+    "apollo-server-cache-redis": "^1.2.3",
+    "apollo-server-caching": "^0.5.3",
+    "apollo-server-errors": "^3.0.0-alpha.3",
     "dotenv": "^8.2.0",
     "envalid": "6.0.1",
     "esm": "^3.2.25",
-    "graphql": "^14.5.8",
+    "graphql": "^14.7.0",
     "graphql-bigint": "^1.0.0",
     "graphql-nats-subscriptions": "^1.4.2",
-    "graphql-subscriptions": "^1.1.0",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.6",
+    "graphql-subscriptions": "^1.2.0",
+    "graphql-tag": "^2.11.0",
+    "graphql-tools": "^4.0.8",
     "graphql-type-json": "^0.3.1",
     "helmet": "^3.21.2",
     "inversify": "^5.0.1",
